tests/invalid/annotation_set_none_element/main.py
def run_case() -> None:
    bad: set[None] = set()


if __name__ == "__main__":
    run_case()
